# PromptDrifter

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-docs.yaml  main-ci.yaml  pr.yaml  publish.yaml  shared-build-and-test.yaml  shared-publish-package.yaml
.github/workflows/shared/: build-and-test.yaml  publish-package.yaml
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: intro.md
docs/docs/docs-configuration/: ci-cd.md  usage.md
docs/src/pages/: index.tsx
scripts/: pyproject.toml  update_pr_version.py
src/promptdrifter/: adapter_manager.py  assertions.py  cache.py  cli.py  drift_types.py  runner.py  yaml_loader.py
src/promptdrifter/adapters/: __init__.py  azure_openai.py  base.py  claude.py  deepseek.py  gemini.py  (+6 more)
tests/: test_cli.py  test_cli_schema_commands.py  test_runner.py  test_schema_migration.py  test_schema_validator.py  test_update_symlinks.py  test_yaml_loader.py
tests/adapters/: test_claude_adapter.py  test_deepseek_adapter.py  test_gemini_adapter.py  test_grok_adapter.py  test_llama_adapter.py  test_mistral_adapter.py  test_ollama_adapter.py  test_openai_adapter.py  test_qwen_adapter.py
tests/integration/: test_cli_base.py  test_drift_type_command.py  test_general_commands.py
tests/metrics/: test_core.py  test_token_overlap.py
tests/unit/: test_adapter_manager.py  test_assertions.py  test_cache.py  test_cli.py  test_runner.py  test_schema_migration.py
tmp/: promptdrifter.yaml
(+21 files in other folders)
