[project]
name = "promptdrifter"
version = "0.0.1"
description = "One-command CI guardrail that catches prompt drift and fails the build when your LLM answers change."
authors = [
    {name = "Colby Timm"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.15.3,<0.16.0)",
    "rich (>=14.0.0,<15.0.0)",
    "openai (>=1.77.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "importlib-resources (>=6.5.2,<7.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "coverage (>=7.8.0,<8.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
]

[dependency-groups]
dev = [
    "pytest-mock>=3.14.0",
    "ruff>=0.11.8",
]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
# Allow unused variables in `__init__.py` and `tests/` files.
# Often useful for imports that are part of the public API or test setup.
per-file-ignores = {"__init__.py" = ["F401"], "tests/*" = ["F401", "S101"]}
select = ["E4", "E7", "E9", "F", "W", "I001", "UP004"] # F: Pyflakes, E/W: pycodestyle, I: isort, UP: pyupgrade
